// Copyright (c) 2026 Team6. All rights reserved.
//  No warranty, explicit or implicit, provided.

using Domain.Entities;

using Infrastructure.Data.Persistent.Configurations;
using Infrastructure.Data.Persistent.Views;

using Microsoft.AspNetCore.Identity;
using Microsoft.AspNetCore.Identity.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore;

namespace Infrastructure.Data.Persistent;

public partial class AppDbContext(DbContextOptions<AppDbContext> options) : IdentityDbContext<User, IdentityRole<Guid>, Guid>(options)
{
    private readonly IEnumerable<AuditEntry> _auditEntries = [];
    public Guid CurrentUserId { get; set; }

    // No need to redeclare DbSet<User> Users; it is inherited from IdentityDbContext<User, ...>
    public DbSet<Resident> Residents { get; set; }
    public DbSet<ResidentNote> ResidentNotes { get; set; }
    public DbSet<MedicineRecord> MedicineRecord { get; set; }
    public DbSet<PainkillerRecord> PainkillerRecord { get; set; }
    public DbSet<PhoneAssignment> PhoneAssignments { get; set; }
    public DbSet<StaffAssignment> StaffAssignments { get; set; }
    public DbSet<Employee> Employees { get; set; }


    // UC-010 GDPR compliance entities
    public DbSet<RetentionPolicy> RetentionPolicies { get; set; }
    public DbSet<RetentionPolicyAudit> RetentionPolicyAudits { get; set; }
    public DbSet<AnonymizationCandidate> AnonymizationCandidates { get; set; }
    public DbSet<SecurityIncident> SecurityIncidents { get; set; }
    public DbSet<SubjectAccessRequest> SubjectAccessRequests { get; set; }
    public DbSet<LoginAttempt> LoginAttempts { get; set; }

    // Identity-related DbSet for refresh tokens
    public DbSet<RefreshToken> RefreshTokens { get; set; }

    public DbSet<AuditEntry> AuditEntries { get; set; }
    public DbSet<ChangeDetail> ChangeDetails { get; set; }


    protected override void OnConfiguring(DbContextOptionsBuilder optionsBuilder)
    {
        _ = optionsBuilder.AddInterceptors(new AuditInterceptor(_auditEntries));
        base.OnConfiguring(optionsBuilder);
    }

    //public override Task<int> SaveChangesAsync(CancellationToken cancellationToken = default)
    //    => base.SaveChangesAsync(cancellationToken);

    /// <summary>
    /// Configures the model and seeds example Identity roles and claims.
    /// </summary>
    protected override void OnModelCreating(ModelBuilder modelBuilder)
    {
        base.OnModelCreating(modelBuilder);
        _ = modelBuilder.ApplyConfiguration(new Configurations.ResidentConfiguration());
        _ = modelBuilder.ApplyConfiguration(new Configurations.RefreshTokenConfiguration());
        _ = modelBuilder.ApplyConfiguration(new Configurations.ResidentNoteConfiguration());
        _ = modelBuilder.ApplyConfiguration(new Configurations.MedicineRecordConfiguration());
        _ = modelBuilder.ApplyConfiguration(new Configurations.PainkillerRecordConfiguration());
        _ = modelBuilder.ApplyConfiguration(new Configurations.ChangeDetailConfiguration());
        _ = modelBuilder.ApplyConfiguration(new Configurations.EmployeeConfiguration());
        _ = modelBuilder.ApplyConfiguration(new Configurations.RetentionPolicyConfiguration());
        _ = modelBuilder.ApplyConfiguration(new Configurations.SubjectAccessRequestConfiguration());
        _ = modelBuilder.ApplyConfiguration(new Configurations.LoginAttemptConfiguration());

        _ = modelBuilder.Entity<MedicineStatusView>()
            .HasNoKey()
            .ToView("medicinestatusview");

        _ = modelBuilder.Entity<PainkillerStatusView>()
            .HasNoKey()
            .ToView("painkillerstatusview");

        _ = modelBuilder.Entity<ResidentNoteView>()
            .HasNoKey()
            .ToView("vwResidentNote");

        _ = modelBuilder.Entity<PhoneAssignmentView>()
            .HasNoKey()
            .ToView("vwPhoneAssignment");

        // Unique index on User.Email
        _ = modelBuilder.Entity<User>()
            .HasIndex(u => u.Email)
            .IsUnique();

        // RolesClaimSeed Identity roles and claims
        IdentitySeed.UserSeed(modelBuilder);
        IdentitySeed.RolesClaimSeed(modelBuilder);
        IdentitySeed.UserRoleSeed(modelBuilder);
        IdentitySeed.UserClaimSeed(modelBuilder);
    }
}
